--- a/Bravo_portfoliotemplate/TributePage/styles.css
+++ b/Bravo_portfoliotemplate/TributePage/styles.css
@@ -1,100 +1,45 @@
-html {
-    /* Setting a base font size of 10px give us easier rem calculations
-         Info: 1rem === 10px, 1.5rem === 15px, 2rem === 20px and so forth
-       */
-    font-size: 10px;
-  }
+body{
+  background-color: #d3d3d3;
+}
+
+hr{
+  height: 10px;
+  border: 0;
+  box-shadow: 0 10px 10px -10px #2a2929 inset;
+}
+
+.achievements, li{
+  font-family: 'Caudex' serif;
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+
+.desc{
+  font-family: 'Caudex' serif;
+  margin-bottom: 50px;
+  font-size: 1.3rem;
+  font-weight: lighter;
+}
+
+.facts{
+  font-weight: lighter;
+  font-size: 15px;
+  font-style: italic;
+}
+
+.header{
+  background-color: darkgrey;
+  color: #000000;
+  max-height: 250px;
   
-  body {
-    /* Native font stack https://getbootstrap.com/docs/4.2/content/reboot/#native-font-stack */
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-      'Helvetica Neue', Arial, sans-serif;
-    font-size: 1.6rem;
-    line-height: 1.5;
-    text-align: center;
-    color: #333;
-    margin: 0;
-  }
-  
-  h1 {
-    font-size: 4rem;
-    margin-bottom: 0;
-  }
-  
-  @media (max-width: 460px) {
-    h1 {
-      font-size: 3.5rem;
-      line-height: 1.2;
-    }
-  }
-  
-  h2 {
-    font-size: 3.25rem;
-  }
-  
-  a {
-    color: #477ca7;
-  }
-  
-  a:visited {
-    color: #74638f;
-  }
-  
-  #main {
-    margin: 30px 8px;
-    padding: 15px;
-    border-radius: 5px;
-    background: #eee;
-  }
-  
-  @media (max-width: 460px) {
-    #main {
-      margin: 0;
-    }
-  }
-  
-  img {
-    max-width: 100%;
-    display: block;
-    height: auto;
-    margin: 0 auto;
-  }
-  
-  #img-div {
-    background: white;
-    padding: 10px;
-    margin: 0;
-  }
-  
-  #img-caption {
-    margin: 15px 0 5px 0;
-  }
-  
-  @media (max-width: 460px) {
-    #img-caption {
-      font-size: 1.4rem;
-    }
-  }
-  
-  #headline {
-    margin: 50px 0;
-    text-align: center;
-  }
-  
-  ul {
-    max-width: 550px;
-    margin: 0 auto 50px auto;
-    text-align: left;
-    line-height: 1.6;
-  }
-  
-  li {
-    margin: 16px 0;
-  }
-  
-  blockquote {
-    font-style: italic;
-    max-width: 545px;
-    margin: 0 auto 50px auto;
-    text-align: left;
-  }
+}
+
+.header_1{
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bolder;
+}
+
+.header_2{
+  font-family: 'Caudex' serif;
+  font-weight: lighter;
+}
