Tribute Page Final

--- a/Bravo_portfoliotemplate/TributePage/styles.css
+++ b/Bravo_portfoliotemplate/TributePage/styles.css
@@ -23,9 +23,10 @@ hr{
 }
 
 .facts{
-  font-weight: lighter;
   font-size: 15px;
   font-style: italic;
+  margin-top: 10px;
+  text-align: center;
 }
 
 .header{
