--- a/Bravo_portfoliotemplate/Product Landing Page/styles.css
+++ b/Bravo_portfoliotemplate/Product Landing Page/styles.css
@@ -44,6 +44,7 @@ a {
   border-radius: 2px;
   background: transparent;
   cursor: pointer;
+  border-color: green;
 }
 
 .grid {
@@ -52,9 +53,10 @@ a {
 
 header {
   position: fixed;
+  width: 100%;
   top: 0;
-  min-height: 75px;
-  padding: 0px 20px;
+  min-height: 30px;
+  padding: 0px 10px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -66,9 +68,14 @@ header {
     flex-wrap: wrap;
   }
 }
+#header-img{
+  max-height: 80px;
+  max-width: 150px;
 
+}
 .logo {
-  width: 60vw;
+  max-width: 180px;
+  max-height: 100px;
 }
 
 @media (max-width: 650px) {
@@ -76,6 +83,7 @@ header {
     margin-top: 15px;
     width: 100%;
     position: relative;
+   left: 200;
   }
 }
 
@@ -110,8 +118,9 @@ nav {
     text-align: center;
     padding: 0 50px;
   }
-  nav li {
+  nav li a{
     padding-bottom: 5px;
+    
   }
 }
 
