--- a/Bravo_portfoliotemplate/Product Landing Page/styles.css
+++ b/Bravo_portfoliotemplate/Product Landing Page/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #eee;
+  background-color: #39FF14;
   font-family: 'Lato', sans-serif;
 }
 
@@ -60,7 +60,7 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #eee;
+  background-color: #32cd32;
 }
 
 @media (max-width: 600px) {
@@ -164,7 +164,7 @@ nav > ul {
   height: 30px;
   margin: 15px 0;
   border: 0;
-  background-color: #f1c40f;
+  background-color: darkgreen;
 }
 
 #hero input[type='submit']:hover {
@@ -188,7 +188,8 @@ nav > ul {
   justify-content: center;
   height: 125px;
   width: 20vw;
-  color: darkorange;
+  color: darkgreen;
+  
 }
 
 @media (max-width: 550px) {
@@ -251,7 +252,7 @@ nav > ul {
 }
 
 .product > .level {
-  background-color: #ddd;
+  background-color: darkgreen;
   color: black;
   padding: 15px 0;
   width: 100%;
@@ -296,11 +297,13 @@ nav > ul {
 }
 
 footer {
-  margin-top: 30px;
-  background-color: #ddd;
-  padding: 20px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #32cd32;
 }
-
 footer > ul {
   display: flex;
   justify-content: flex-end;
@@ -315,5 +318,5 @@ footer > span {
   display: flex;
   justify-content: flex-end;
   font-size: 0.9em;
-  color: #444;
+  color: black;
 }
