--- a/Bravo_portfoliotemplate/Product Landing Page/styles.css
+++ b/Bravo_portfoliotemplate/Product Landing Page/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #39FF14;
+  background-color: #5c9e50;
   font-family: 'Lato', sans-serif;
 }
 
@@ -87,6 +87,10 @@ header {
   }
 }
 
+.image{
+  margin-top:10px;
+}
+
 .logo > img {
   width: 100%;
   height: 100%;
@@ -152,10 +156,11 @@ nav > ul {
   word-wrap: break-word;
 }
 
-#hero input[type='email'] {
+#hero input[type='text'] {
   max-width: 275px;
   width: 100%;
   padding: 5px;
+  background-color: lightgreen;
 }
 
 #hero input[type='submit'] {
@@ -168,7 +173,7 @@ nav > ul {
 }
 
 #hero input[type='submit']:hover {
-  background-color: orange;
+  background-color: lightgreen;
   transition: background-color 1s;
 }
 
@@ -205,6 +210,7 @@ nav > ul {
   height: 125px;
   width: 80vw;
   padding: 5px;
+  
 }
 
 @media (max-width: 550px) {
