--- a/Bravo_portfoliotemplate/css/main.css
+++ b/Bravo_portfoliotemplate/css/main.css
@@ -1117,9 +1117,10 @@ header .logo {
 	margin-left: 20px;
 	margin-right: 50px;
 	margin-top: 25px;
-	position: relative;
+	position:absolute;
     bottom: 6px;
-	left: 1385px;
+	top: -3.5px;
+	left: 40px;
     width: 50px;
     max-height: 30px;
 }
@@ -1133,7 +1134,7 @@ header .logo a {
 	color: transparent;
 	width: 92px;
 	height: 15px;
-	background: url("../images/logo.png") no-repeat center;
+	background: url("logo.jpg") no-repeat center;
 	background-size: 92px 15px;
 }
 
@@ -2130,7 +2131,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #services {
-	background: #313131 url(../images/bg.jpg) no-repeat center;
+	background: #313131 url(background.jpg) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
